all misteks and bugs

--- a/tamplate/partials/headerlinks.hbs
+++ b/tamplate/partials/headerlinks.hbs
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--Title-->
-<title>New Website</title>
+<title>Weather</title>
 <!--<Bootstrap--->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
     integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -21,3 +21,6 @@
 <link rel="shortcut icon" type="image/png" href="IMG/Logo.png">
 
 <script src="expressweb/public/js/main.js"></script>
+
+{{!-- http link --}}
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
