--- a/tamplate/views/weather.hbs
+++ b/tamplate/views/weather.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     {{>headerlinks}}
 </head>
@@ -15,7 +14,7 @@
             <div class="col-md-12 col-12 mx-auto">
                 <div class="main_content">
                     <form class="temp_form">
-                        <input type="text" id="cityName" placeholder="Enter Your City Name" autocomplete="off" spellcheck="false"
+                        <input type="text" id="cityName" placeholder="City Name" autocomplete="off" spellcheck="false"
                             data-ms-editor="true"/>
                         <input type="submit" value="Search" id="submitBtn"/>
                     </form>
@@ -29,7 +28,7 @@
                     <div class="main_layer">
                         <p id="city_name">Get Output Here</p>
                         <div class="middle_layer data_hide">
-                            <p id="temp"><span>0</span> <sup>o</sup>C</p>
+                            <p id="temp"><span></span> <sup>o</sup>C</p>
                             <p id="Status">Weather</p>
                         </div>
                     </div>
