--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,4 +263,11 @@ footer p{
 		 height:auto;
 		 margin-top: 3rem;
 	 }
+
+	 .temp_form{
+		 width: 100%;
+	 }
+	 .tempInformation{
+		 width: auto;
+	 }
 }
