--- a/tamplate/views/index.hbs
+++ b/tamplate/views/index.hbs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     {{>headerlinks}}
 </head>
-
 <body>
     <!---Nav Bar-->
     {{>navbar}}
@@ -31,7 +29,7 @@
                                     <img class="d-block img-fluid" src="IMG/contact.png" alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="IMG/About.png" alt="Third slide">
+                                    <img class="d-block img-fluid" src="IMG/about.png" alt="Third slide">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
